--- a/Day6_GuardGallivant/Day6_GuardGallivant.csproj
+++ b/Day6_GuardGallivant/Day6_GuardGallivant.csproj
@@ -11,9 +11,23 @@
       <None Update="Day6_GuardGallivant_Info.md">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="Day6_GuardGallivant_Example_Input.txt">
+      <None Update="Inputs\Day6_GuardGallivant_Example_Input.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Inputs\Day6_GuardGallivant_First_Input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Inputs\Day6_GuardGallivant_Second_Input.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Helpers\Helpers.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="xunit" Version="2.9.2" />
     </ItemGroup>
 
 </Project>
